force-app/main/default/objects/Bill_Adjustment__c/Bill_Adjustment__c.object-meta.xml
<CustomObject>
    <description>CS Billing: If we know that a UAS is going to need adjustments on a future bill, they are stored here until that bill is generated</description>
    <label>Bill Adjustment</label>
    <nameField>
        <label>Bill Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>