force-app/main/default/objects/Bill_Adjustment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bill Adjustments (Account)</relationshipLabel>
    <relationshipName>Bill_Adjustments1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>