force-app/main/default/objects/Bill_Adjustment__c/fields/Account_Bill__c.field-meta.xml
<CustomField>
    <fullName>Account_Bill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>XXAccount Bill</label>
    <referenceTo>Account_Bill__c</referenceTo>
    <relationshipLabel>Bill Adjustments</relationshipLabel>
    <relationshipName>Bill_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>