force-app/main/default/objects/Bill_Adjustment__c/fields/Adjustment_Source__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Source__c</fullName>
    <description>What is the source of the adjustment?</description>
    <inlineHelpText>What is the source of the adjustment?</inlineHelpText>
    <label>Adjustment Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Request</fullName>
            </value>
            <value>
                <fullName>Credit Adjustment</fullName>
            </value>
            <value>
                <fullName>Incentive</fullName>
            </value>
            <value>
                <fullName>Customer Support - Courtesy</fullName>
            </value>
            <value>
                <fullName>Customer Support - Error</fullName>
            </value>
            <value>
                <fullName>Finalled Utility Account</fullName>
            </value>
            <value>
                <fullName>Missed Bill</fullName>
            </value>
            <value>
                <fullName>Payment Failure</fullName>
            </value>
            <value>
                <fullName>Payment Logging Error</fullName>
            </value>
            <value>
                <fullName>Platform Bug</fullName>
            </value>
            <value>
                <fullName>Reconciliation Clean-Up</fullName>
            </value>
            <value>
                <fullName>Utility Error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>