force-app/main/default/objects/Bill_Adjustment__c/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <inlineHelpText>Determines how this adjustment will be pulled into client reports: use &quot;Production&quot; for any delayed, missed or incorrectly billed credits. &quot;BW Credit&quot; for any adjustment for which BW will need to pay a client, etc. Contact Accounting with ?s</inlineHelpText>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Late Fee Waived</fullName>
            </value>
            <value>
                <fullName>Customer Refund</fullName>
            </value>
            <value>
                <fullName>BW Credit</fullName>
            </value>
            <value>
                <fullName>Project Payment Transfer</fullName>
            </value>
            <value>
                <fullName>Returned Payment</fullName>
            </value>
            <value>
                <fullName>Client Credit</fullName>
            </value>
            <value>
                <fullName>Returned Check Payment</fullName>
            </value>
            <value>
                <fullName>No Longer Billing</fullName>
            </value>
            <value>
                <fullName>Plympton TBD</fullName>
                <isActive>false</isActive>
                <label>Plympton TBD</label>
            </value>
            <value>
                <fullName>Write - Off</fullName>
                <isActive>false</isActive>
                <label>Write - Off</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>