force-app/main/default/objects/Bill_Adjustment__c/fields/Applied_to_Bill__c.field-meta.xml
<CustomField>
    <fullName>Applied_to_Bill__c</fullName>
    <formula>IF(UASB__c == null , FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applied to Bill</label>
    <type>Checkbox</type>
</CustomField>