force-app/main/default/objects/Bill_Adjustment__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <defaultValue>&quot;Unapproved&quot;</defaultValue>
    <inlineHelpText>Set automatically by the approval process</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Unapproved</fullName>
                
                
                    <label>Unapproved</label>
                
                </value>
            
                <value>
                
                    <fullName>Pending</fullName>
                
                
                    <label>Pending</label>
                
                </value>
            
                <value>
                
                    <fullName>Approved</fullName>
                
                
                    <label>Approved</label>
                
                </value>
            
                <value>
                
                    <fullName>Rejected</fullName>
                
                
                    <label>Rejected</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>