force-app/main/default/objects/Bill_Adjustment__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Stamped with UAS.Opp.SSS.Entity.Client at creation</inlineHelpText>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bill Adjustments</relationshipLabel>
    <relationshipName>Bill_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>