force-app/main/default/objects/Bill_Adjustment__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>IF(ISPICKVAL(Adjustment_Type__c,&apos;Production&apos; ), ( Credits_Allocated__c -  Adjustment_Amount__c ), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>