force-app/main/default/objects/Bill_Adjustment__c/fields/Discounted_Bill__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Bill__c</fullName>
    <label>Discounted Bill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>