force-app/main/default/objects/Bill_Adjustment__c/fields/Distributed_Among_System_Bills__c.field-meta.xml
<CustomField>
    <fullName>Distributed_Among_System_Bills__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distributed Among System Bills</label>
    <type>Checkbox</type>
</CustomField>