force-app/main/default/objects/Bill_Adjustment__c/fields/Effective__c.field-meta.xml
<CustomField>
    <fullName>Effective__c</fullName>
    <label>Effective</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Post on Next Bill</fullName>
                
                    <default>true</default>
                
                    <label>Post on Next Bill</label>
                
                </value>
            
                <value>
                
                    <fullName>Post When Approved</fullName>
                
                
                    <label>Post When Approved</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>