force-app/main/default/objects/Bill_Adjustment__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <inlineHelpText>Date a credit/debit memo is posted OR invoice date for a production adjustment</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>