force-app/main/default/objects/Bill_Adjustment__c/fields/Externally_Serviced__c.field-meta.xml
<CustomField>
    <fullName>Externally_Serviced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stamped by UAS Externally Serviced upon creation</description>
    <inlineHelpText>Stamped by UAS Externally Serviced upon creation</inlineHelpText>
    <label>Externally Serviced</label>
    <type>Checkbox</type>
</CustomField>