force-app/main/default/objects/Bill_Adjustment__c/fields/Intermediate_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Outstanding__c</fullName>
    <inlineHelpText>Used in OverpaymentApplication, even though it isn&apos;t populated</inlineHelpText>
    <label>Intermediate Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>