force-app/main/default/objects/Bill_Adjustment__c/fields/kWh__c.field-meta.xml
<CustomField>
    <fullName>kWh__c</fullName>
    <inlineHelpText>This field is used for Production Adjustments and is manually entered.</inlineHelpText>
    <label>kWh Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>