force-app/main/default/objects/Bill_Adjustment__c/fields/Overpayment__c.field-meta.xml
<CustomField>
    <fullName>Overpayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>XXOverpayment</label>
    <type>Checkbox</type>
</CustomField>