force-app/main/default/objects/Bill_Adjustment__c/fields/Production_Update__c.field-meta.xml
<CustomField>
    <fullName>Production_Update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the production update to which this bill adjustment is related.  Used for production adjustments per W-008520.</description>
    <inlineHelpText>This is the production update to which this bill adjustment is related.  Used for production adjustments.</inlineHelpText>
    <label>Production Update</label>
    <referenceTo>Energy_Usage_Update__c</referenceTo>
    <relationshipLabel>Bill Adjustments</relationshipLabel>
    <relationshipName>Bill_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>