force-app/main/default/objects/Bill_Adjustment__c/fields/Reason_For_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Adjustment__c</fullName>
    <label>Reason For Adjustment:</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>