force-app/main/default/objects/Bill_Adjustment__c/fields/Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_ID__c</fullName>
    <label>Source ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>