force-app/main/default/objects/Bill_Adjustment__c/fields/Total_Adjustments_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Total_Adjustments_Distributed__c</fullName>
    <label>Total Funds Distributed</label>
    <summarizedField>Adjustment_Application__c.Adjustment_Amount__c</summarizedField>
    <summaryForeignKey>Adjustment_Application__c.Bill_Adjustment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>