force-app/main/default/objects/Bill_Adjustment__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <label>Transaction ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>