force-app/main/default/objects/Bill_Adjustment__c/fields/Transfer__c.field-meta.xml
<CustomField>
    <fullName>Transfer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Required for Production Adjustments</inlineHelpText>
    <label>Transfer</label>
    <referenceTo>Transfer__c</referenceTo>
    <relationshipLabel>Adjustments</relationshipLabel>
    <relationshipName>Bill_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>