force-app/main/default/objects/Bill_Adjustment__c/fields/UASB__c.field-meta.xml
<CustomField>
    <fullName>UASB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility Account Subscription Bill</label>
    <referenceTo>UASB__c</referenceTo>
    <relationshipLabel>Bill Adjustments</relationshipLabel>
    <relationshipName>Bill_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>