force-app/main/default/objects/Bill_Adjustment__c/fields/Utility_Account_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility Account Subscription</label>
    <referenceTo>Utility_Account_Subscription__c</referenceTo>
    <relationshipLabel>Bill Adjustments</relationshipLabel>
    <relationshipName>Bill_Adjustments_del</relationshipName>
    <type>Lookup</type>
</CustomField>