force-app/main/default/objects/Bill_Adjustment__c/validationRules/Adjustment_Type_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Adjustment_Type_Is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(Adjustment_Type__c,&quot;&quot;),
ISPICKVAL(Approval_Status__c ,&quot;Approved&quot;)
)</errorConditionFormula>
    <errorMessage>Adjustment Type is Required</errorMessage>
</ValidationRule>