force-app/main/default/objects/Bill_Adjustment__c/validationRules/Cannot_Modify_Amount_After_Applied.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Modify_Amount_After_Applied</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(UASB__c)), 
ISCHANGED(Adjustment_Amount__c), 
UASB__r.Adjustment_Amount__c != Adjustment_Amount__c)</errorConditionFormula>
    <errorMessage>Cannot modify adjustment amount without first changing the UASB Adjustment Amount</errorMessage>
</ValidationRule>