force-app/main/default/objects/Bill_Adjustment__c/validationRules/Production_Type_Must_Have_NMC_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Production_Type_Must_Have_NMC_Value</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL(Adjustment_Type__c, &apos;Production&apos;),  ISBLANK( Credits_Allocated__c) , FALSE)</errorConditionFormula>
    <errorDisplayField>Credits_Allocated__c</errorDisplayField>
    <errorMessage>Bill Adjustments from Production Errors must have Credits Allocated filled in</errorMessage>
</ValidationRule>