force-app/main/default/objects/Bill_Adjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Utility_Account_Subscription__c</columns>
    <columns>Adjustment_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>NAME</field>
        
            <operation>contains</operation>
        
            <value>Jeffrey Bernier</value>
        
        </filters>
    <label>Jeffery Bernier</label>
</ListView>